<resources>
    <string name="app_name">PopularMovies Part II</string>
    <string name="vote_average_label">Vote Average:\u0020</string>
    <string name="released_date_label">Released on:\u0020</string>
    <string name="unknown_sort_message">unknown sort option!</string>
    <string name="sort_by_most_popular">sort by most popular</string>
    <string name="sort_by_highest_rated">sort by highest rated</string>
    <string name="sort_by_release_date">sort by release date</string>
    <string name="no_internet_error_message">Please check your Internet connection and try again.</string>
    <string name="trailer_title">Trailer</string>
    <string name="toggle_button_off_message">like movie</string>
    <string name="toggle_button_on_message">un-like</string>
    <string name="movie_saved_message">Saved movie.</string>
    <string name="movie_already_saved_msg">You have already liked this movie.</string>
    <string name="movie_unliked_message">Movie has been un-liked.</string>
    <string name="dispay_favorites">display favorites</string>
    <string name="error_displaying_the_movie_poster">Error displaying the movie poster</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
</resources>
